# Bahnvorhersage

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dockerignore  README.md  chunk_limits.pickle  pyproject.toml  requirements.txt  webserverconfig.py
api/: iris.py  ris.py
cache/: recent_change_rtd_ar_ps_encoder_dict.pkl  recent_change_rtd_c_encoder_dict.pkl  recent_change_rtd_n_encoder_dict.pkl  recent_change_rtd_o_encoder_dict.pkl  recent_change_rtd_pp_encoder_dict.pkl  recent_change_rtd_station_encoder_dict.pkl
crawler/: change.py  plan.py
data_analysis/: data_stats.py  obstacles.py  over_distance.py  over_time.py  packed_bubbles.py  per_delay.py  per_station.py  per_train_type.py
database/: __init__.py  base.py  cached_table_fetch.py  change.py  engine.py  migrate_plan_by_id.py  ml_stat.py  plan.py  plan_by_id.py  plan_by_id_v2.py  plan_to_plan_by_id.py  ris_transfer_time.py  rtd.py  sqlalchemyonefour.py  unique_change.py  unparsed.py  upsert.py  upsert_copy_from.py
gtfs/: agency.py  calendar_dates.py  connections.py  gtfs_realtime_pb2.py  routes.py  stop_times.py  stops.py  transfers.py  trips.py
helpers/: BetriebsstellenBill.py  ConnectionRay.py  ObstacleOlly.py  RtdRay.py  StationPhillip.py  StreckennetzSteffi.py  __init__.py  bahn_vorhersage.py  baseline_analysis.py  batcher.py  cache.py  colormaps.py  fancy_print_tcp.py  groupby_index_to_flat.py  hash64.py  logger.py  monitor_bot.py  pairwise.py  profiler.py  remove_item_from_list.py  retry.py  station_apis.py
k8s/: Dockerfile.db_rest  build_db_rest.sh  change-crawler.yaml  config.md  dns.md  (+27 more)
(+142 files in other folders)
