[project]
name = "bahnvorhersage"
version = "0.0.1"
dependencies = [
    "Cartopy==0.22.0",
    "discord.py==2.3.2",
    "dask==2023.10.0",
    "distributed==2023.10.0",
    "Flask==3.0.0",
    "Flask-Limiter==3.5.0",
    "Flask-SQLAlchemy==3.1.1",
    "geopandas==0.14.0",
    "geopy==2.4.0",
    "gunicorn==21.2.0",
    "igraph==0.11.2",
    "lxml==4.9.3",
    "matplotlib==3.8.0",
    "neo4j==5.14.1",
    "networkx==3.2",
    "numpy==1.26.1",
    "pandas==2.1.1",
    "psycopg2-binary==2.9.9",
    "pyarrow==14.0.1",
    "pyvis==0.3.2",
    "redis==5.0.1",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "shapely==2.0.2",
    "sortedcontainers==2.4.0",
    "SQLAlchemy==2.0.22",
    "tqdm==4.66.1",
    "tueplots==0.0.10",
    "xgboost==2.0.0",
    "xxhash==3.4.1",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = ["pre-commit", "ruff"]

[tool.setuptools]
packages = [
    'api',
    'crawler',
    'data_analysis',
    'database',
    'gtfs',
    'helpers',
    'ml_models',
    'parser',
    'router',
    'webserver',
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I", "UP"]
